Project/phase2/test/test_12012937_3.out
Error type 10 at Line 4: indexing on non-array variable
Error type 5 at Line 4: unmatching type on both sides of assignment
Error type 2 at Line 5: undefined function: cout

