Project/phase2/test/test_12012937_3.spl
int t()
{
	float i;
	i[0]=1+2;
	cout(i+1);
}
